make blurred buttons unclickable, fix small ShoppingCart issue

--- a/online-shop-react/src/stylesheets/popup.css
+++ b/online-shop-react/src/stylesheets/popup.css
@@ -13,4 +13,5 @@
 
   .blur{
     filter: blur(10px);
+    pointer-events: none;
   }
